<?php

namespace App\Http\Controllers;

use App\Models\User;
use Illuminate\Support\Facades\DB;
use Illuminate\Http\Request;

class AdminController extends Controller
{
    public function __construct()
    {
        $this->middleware('auth');
    }

    public function index()
    {
        // $users = DB::select('select * from users');
        $users = User::all();
        return view('admin.home', ['users'=>$users]);
    }

    public function usersshow()
    {
        $users = User::all();
        return view('admin.components.users.show', compact('users'));
    }
}
